web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-arrow-expression-object-destructuring/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,12)
1|({a}) => { "use strict" }
 |          ^
